--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "@skynexui/components": "^1.23.9",
+    "@supabase/supabase-js": "^1.29.4",
+    "dotenv": "^14.3.2",
     "next": "^12.0.8",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "dev": "next dev",
